fix connection none static link error
Signed-off-by: songzhengteng <songzhengteng@huawei.com>
Change-Id: I1dc44a3a5d992bfe7c13a4ba2e43a3b5e294eeab

--- a/core/connection/conn.gni
+++ b/core/connection/conn.gni
@@ -24,6 +24,8 @@ conn_manager_inc = ble_connection_inc + br_connection_inc + tcp_connection_inc +
                    wifi_direct_connection_inc
 conn_manager_external_deps =
     wifi_direct_connection_external_deps + ble_connection_external_deps
+conn_manager_common_deps = wifi_direct_connection_common_deps
+
 conn_manager_src +=
     [ "$dsoftbus_root_path/core/connection/manager/softbus_conn_manager.c" ]
 conn_manager_inc += [
