--- a/core/authentication/authentication.gni
+++ b/core/authentication/authentication.gni
@@ -27,6 +27,15 @@ enhanced = exec_script("$dsoftbus_root_path/check_sub_module.py",
                        ],
                        "value")
 
+auth_server_inc = [
+  "$dsoftbus_root_path/core/authentication/include",
+  "$dsoftbus_root_path/core/authentication/interface",
+  "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
+  "$dsoftbus_root_path/core/adapter/authentication/include",
+  "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/include",
+  "$dsoftbus_root_path/core/adapter/bus_center/include",
+  "$dsoftbus_root_path/core/bus_center/utils/include/",
+]
 if (dsoftbus_feature_lnn_net) {
   auth_server_src = [
     "$authentication_path/src/auth_common.c",
@@ -42,13 +51,20 @@ if (dsoftbus_feature_lnn_net) {
   ]
   if (enhanced) {
     auth_server_src += [
-      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/auth_meta_manager.c",
       "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/auth_device_common_key.c",
+      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/auth_meta_manager.c",
+      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/ccmp_instance.c",
+      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/ccmp_key.c",
+      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/ccmp_manager.c",
+      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/ccmp_message.c",
     ]
+    auth_server_inc +=
+        [ "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/include/" ]
   } else {
     auth_server_src += [
-      "$authentication_path/src/virtual/auth_meta_manager_virtual.c",
       "$authentication_path/src/virtual/auth_device_common_key_virtual.c",
+      "$authentication_path/src/virtual/auth_meta_manager_virtual.c",
+      "$authentication_path/src/virtual/ccmp_interface_virtual.c",
     ]
   }
   if (dsoftbus_feature_ip_auth) {
@@ -64,15 +80,6 @@ if (dsoftbus_feature_lnn_net) {
     "$authentication_path/src/virtual/auth_meta_manager_virtual.c",
   ]
 }
-auth_server_inc = [
-  "$dsoftbus_root_path/core/authentication/include",
-  "$dsoftbus_root_path/core/authentication/interface",
-  "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
-  "$dsoftbus_root_path/core/adapter/authentication/include",
-  "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/include",
-  "$dsoftbus_root_path/core/adapter/bus_center/include",
-  "$dsoftbus_root_path/core/bus_center/utils/include/",
-]
 auth_server_deps = []
 
 if (defined(ohos_lite)) {
