--- a/core/authentication/authentication.gni
+++ b/core/authentication/authentication.gni
@@ -19,7 +19,7 @@ if (dsoftbus_feature_auth_account == true) {
 
 authentication_path = "$dsoftbus_root_path/core/authentication"
 native_source_path = rebase_path("$dsoftbus_root_path")
-auth_dir = "dsoftbus_enhance/core/authentication/src"
+auth_dir = "dsoftbus_enhance/core/authentication/"
 enhanced = exec_script("$dsoftbus_root_path/check_sub_module.py",
                        [
                          "$native_source_path",
@@ -51,20 +51,21 @@ if (dsoftbus_feature_lnn_net) {
   ]
   if (enhanced) {
     auth_server_src += [
-      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/auth_device_common_key.c",
-      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/auth_meta_manager.c",
-      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/ccmp_instance.c",
-      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/ccmp_key.c",
-      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/ccmp_manager.c",
-      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/src/ccmp_message.c",
+      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/auth_device_common_key.c",
+      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/auth_meta_manager.c",
+      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/ccmp/src/ccmp_instance.c",
+      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/ccmp/src/ccmp_key.c",
+      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/ccmp/src/ccmp_manager.c",
+      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/ccmp/src/ccmp_message.c",
     ]
-    auth_server_inc +=
-        [ "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/include/" ]
+    auth_server_inc += [
+      "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/ccmp/include/",
+    ]
   } else {
     auth_server_src += [
       "$authentication_path/src/virtual/auth_device_common_key_virtual.c",
       "$authentication_path/src/virtual/auth_meta_manager_virtual.c",
-      "$authentication_path/src/virtual/ccmp_interface_virtual.c",
+      "$authentication_path/src/virtual/customized_security_protocol_virtual.c",
     ]
   }
   if (dsoftbus_feature_ip_auth) {
