solve compile issues
Signed-off-by: jeosif <liubao6@huawei.com>
Change-Id: I87845999f8671a229ce6b438b665e09ad9488b56

--- a/core/authentication/authentication.gni
+++ b/core/authentication/authentication.gni
@@ -59,6 +59,7 @@ if (dsoftbus_feature_lnn_net) {
       "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/ccmp/src/ccmp_message.c",
     ]
     auth_server_inc += [
+      "$dsoftbus_root_path/adapter/common/include/",
       "$dsoftbus_root_path/dsoftbus_enhance/core/authentication/ccmp/include/",
     ]
   } else {
