--- a/adapter/default_config/feature_config/small/config.gni
+++ b/adapter/default_config/feature_config/small/config.gni
@@ -41,4 +41,6 @@ declare_args() {
 
   dsoftbus_feature_encrypt = 0
   dsoftbus_standard_feature_dfinder_support_multi_nif = true
+
+  dsoftbus_feature_ex_kits = false
 }
