build: update BUILD.gn
Signed-off-by: aqxyjay <zhangchunxin@huawei.com>

--- a/sdk/BUILD.gn
+++ b/sdk/BUILD.gn
@@ -11,6 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+import("../core/common/dfx/dsoftbus_dfx.gni")
 import("../dsoftbus.gni")
 import("bus_center/bus_center_sdk.gni")
 import("discovery/disc_sdk.gni")
@@ -26,6 +27,7 @@ common_client_inc = bus_center_sdk_inc + disc_sdk_inc +
 common_client_deps = bus_center_sdk_deps + trans_session_manager_sdk_deps
 
 common_client_deps += [
+  "$dsoftbus_dfx_path/log:softbus_dfx_log",
   "$dsoftbus_root_path/adapter:softbus_adapter",
   "$dsoftbus_root_path/core/common:softbus_utils",
 ]
