--- a/tests/core/common/message_handler/unittest/BUILD.gn
+++ b/tests/core/common/message_handler/unittest/BUILD.gn
@@ -12,6 +12,7 @@
 # limitations under the License.
 
 import("//build/lite/config/component/lite_component.gni")
+import("../../../../../core/common/dfx/dsoftbus_dfx.gni")
 import("../../../../../dsoftbus.gni")
 
 dsoftbus_root_path = "../../../../.."
