--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -11,6 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+import("../../core/common/dfx/dsoftbus_dfx.gni")
 import("../../dsoftbus.gni")
 import("../connection/common/conn_common.gni")
 import("../transmission/common/trans_common.gni")
