--- a/tests/core/common/BUILD.gn
+++ b/tests/core/common/BUILD.gn
@@ -19,8 +19,10 @@ group("unittest") {
   deps = [
     "anonymize:unittest",
     "bitmap:unittest",
+    "dfx/anonymize:unittest",
     "dfx/hidumper_adapter/unittest:unittest",
     "dfx/hisysevent_adapter/unittest:unittest",
+    "dfx/log:unittest",
     "log:unittest",
     "network:unittest",
     "security/permission/common:unittest",
