--- a/core/connection/wifi_direct/wifi_direct.gni
+++ b/core/connection/wifi_direct/wifi_direct.gni
@@ -108,3 +108,26 @@ if (dsoftbus_feature_conn_p2p == true &&
     "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/wifi_direct_p2p_adapter_virtual.c",
   ]
 }
+
+enhanced_legacy_connection_dir = "dsoftbus_enhance/core/connection/legacy"
+enhanced_legacy_connection =
+    exec_script("$dsoftbus_root_path/check_sub_module.py",
+                [
+                  "$native_source_path",
+                  "$enhanced_legacy_connection_dir",
+                ],
+                "value")
+if (enhanced_legacy_connection == true) {
+  import("../../../dsoftbus_enhance/core/connection/legacy/legacy.gni")
+  wifi_direct_connection_inc += legacy_connection_inc
+  wifi_direct_connection_src += legacy_connection_src
+  wifi_direct_connection_common_deps += legacy_connection_common_deps
+  wifi_direct_connection_external_deps += legacy_connection_external_deps
+} else {
+  wifi_direct_connection_inc += [
+    "$dsoftbus_root_path/core/connection/ble/channel",
+  ]
+  wifi_direct_connection_src += [
+    "$dsoftbus_root_path/core/connection/ble/channel/legacy_ble_channel_virtual.c",
+  ]
+}
