--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -13,6 +13,7 @@
 
 import("//build/test.gni")
 import("../../../../core/bus_center/lnn/decision_center/decision_center.gni")
+import("../../../../core/common/dfx/dsoftbus_dfx.gni")
 import("../../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/LNN"
@@ -118,6 +119,7 @@ lnn_mock_test_include_dirs = [
 ]
 
 lnn_mock_test_deps = [
+  "$dsoftbus_dfx_path/log:softbus_dfx_log",
   "$dsoftbus_root_path/adapter:softbus_adapter",
   "$dsoftbus_root_path/core/common:softbus_utils",
   "$dsoftbus_root_path/core/frame:softbus_server",
