--- a/tests/core/discovery/coap/unittest/BUILD.gn
+++ b/tests/core/discovery/coap/unittest/BUILD.gn
@@ -14,6 +14,7 @@
 import("//build/lite/config/component/lite_component.gni")
 import("//build/ohos.gni")
 import("//build/test.gni")
+import("../../../../../core/common/dfx/dsoftbus_dfx.gni")
 import("../../../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/discovery"
@@ -45,6 +46,7 @@ ohos_unittest("DiscNstackxAdapterTest") {
   ]
 
   deps = [
+    "$dsoftbus_dfx_path/log:softbus_dfx_log",
     "../../../../../components/nstackx/nstackx_ctrl:nstackx_ctrl",
     "../../../../../core/common:softbus_utils",
     "../../../../../core/frame:softbus_server",
