--- a/tests/core/discovery/manager/unittest/BUILD.gn
+++ b/tests/core/discovery/manager/unittest/BUILD.gn
@@ -14,6 +14,7 @@
 import("//build/lite/config/component/lite_component.gni")
 import("//build/ohos.gni")
 import("//build/test.gni")
+import("../../../../../core/common/dfx/dsoftbus_dfx.gni")
 import("../../../../../dsoftbus.gni")
 import("../../../../utils/utils.gni")
 
@@ -37,6 +38,7 @@ ohos_unittest("DiscManagerTest") {
   ]
 
   deps = [
+    "$dsoftbus_dfx_path/log:softbus_dfx_log",
     "$dsoftbus_root_path/components/nstackx/nstackx_ctrl:nstackx_ctrl",
     "$dsoftbus_root_path/core/frame:softbus_server",
     "//third_party/googletest:gtest_main",
@@ -81,6 +83,7 @@ ohos_unittest("DiscManagerMockTest") {
   include_dirs += test_utils_inc
 
   deps = [
+    "$dsoftbus_dfx_path/log:softbus_dfx_log",
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common:softbus_utils",
     "//third_party/googletest:gmock",
