--- a/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer/BUILD.gn
+++ b/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer/BUILD.gn
@@ -15,6 +15,7 @@
 import("//build/config/features.gni")
 import("//build/ohos.gni")
 import("//build/test.gni")
+import("../../../../../core/common/dfx/dsoftbus_dfx.gni")
 import("../../../../../dsoftbus.gni")
 import("../../../../../sdk/bus_center/bus_center_sdk.gni")
 import("../../../../../sdk/discovery/disc_sdk.gni")
@@ -30,6 +31,7 @@ common_client_inc = bus_center_sdk_inc + disc_sdk_inc +
 common_client_deps = bus_center_sdk_deps + trans_session_manager_sdk_deps
 
 common_client_deps += [
+  "$dsoftbus_dfx_path/log:softbus_dfx_log",
   "$dsoftbus_root_path/adapter:softbus_adapter",
   "$dsoftbus_root_path/core/common:softbus_utils",
 ]
