--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -12,6 +12,7 @@
 # limitations under the License.
 
 import("../../dsoftbus.gni")
+import("../common/dfx/dsoftbus_dfx.gni")
 import("../connection/common/conn_common.gni")
 import("../transmission/common/trans_common.gni")
 
@@ -38,12 +39,14 @@ common_utils_src = [
 if (defined(ohos_lite)) {
   if (ohos_kernel_type == "liteos_m") {
     diff_deps = [
+      "$dsoftbus_dfx_path/log:softbus_dfx_log",
       "$hilog_lite_deps_path",
       "//build/lite/config/component/cJSON:cjson_static",
     ]
     build_type = "static_library"
   } else {
     diff_deps = [
+      "$dsoftbus_dfx_path/log:softbus_dfx_log",
       "$hilog_lite_deps_path",
       "//build/lite/config/component/cJSON:cjson_shared",
     ]
