DFX:软总线连接模块日志归一化
Signed-off-by: wurui <wurui51@huawei.com>

--- a/core/adapter/core_adapter.gni
+++ b/core/adapter/core_adapter.gni
@@ -11,6 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 import("../../adapter/common/net/bluetooth/net_bluetooth.gni")
+import("../../core/common/dfx/dsoftbus_dfx.gni")
 import("../../dsoftbus.gni")
 
 br_adapter_src =
@@ -25,7 +26,7 @@ bus_center_core_adapter_src = [
   "$dsoftbus_root_path/core/adapter/authentication/src/lnn_extdata_config_virtual.c",
 ]
 bus_center_core_adapter_inc = [ "$dsoftbus_root_path/adapter/common/include" ]
-bus_center_core_adapter_deps = []
+bus_center_core_adapter_deps = [ "$dsoftbus_dfx_path/log:softbus_dfx_log" ]
 bus_center_core_adapter_external_deps = [ "init:libbegetutil" ]
 
 if (defined(ohos_lite)) {
