--- a/tests/adapter/bluetooth/BUILD.gn
+++ b/tests/adapter/bluetooth/BUILD.gn
@@ -15,6 +15,7 @@ import("//build/lite/config/component/lite_component.gni")
 import("//build/ohos.gni")
 import("//build/test.gni")
 import("../../../adapter/common/net/bluetooth/net_bluetooth.gni")
+import("../../../core/common/dfx/dsoftbus_dfx.gni")
 import("../../../dsoftbus.gni")
 
 dsoftbus_root_path = "../../.."
@@ -28,6 +29,7 @@ if (!defined(ohos_lite)) {
   bt_test_inc += adapter_ble_inc
 
   bt_test_deps = [
+    "$dsoftbus_dfx_path/log:softbus_dfx_log",
     "$dsoftbus_root_path/core/common:softbus_utils",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
