--- a/tests/core/authentication/BUILD.gn
+++ b/tests/core/authentication/BUILD.gn
@@ -12,6 +12,7 @@
 # limitations under the License.
 
 import("//build/test.gni")
+import("../../../core/authentication/authentication.gni")
 import("../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/auth"
@@ -476,4 +477,9 @@ group("unittest") {
 group("fuzztest") {
   testonly = true
   deps = [ "fuzztest:fuzztest" ]
+  if (enhanced) {
+    deps += [
+      "$dsoftbus_root_path/dsoftbus_enhance/test/core/authentication:fuzztest",
+    ]
+  }
 }
