[test]: Add DiscBle test cases
Signed-off-by: huxianghao <huxianghao@huawei.com>

--- a/tests/core/discovery/BUILD.gn
+++ b/tests/core/discovery/BUILD.gn
@@ -29,6 +29,7 @@ group("unittest") {
   if (support_bluetooth && dsoftbus_feature_disc_ble) {
     deps += [
       "ble/dispatcher:unittest",
+      "ble/softbus_ble:unittest",
       "ble/softbus_ble_mock:unittest",
       "ipc:unittest",
     ]
