--- a/tests/core/common/BUILD.gn
+++ b/tests/core/common/BUILD.gn
@@ -20,6 +20,7 @@ group("unittest") {
     "anonymize:unittest",
     "bitmap:unittest",
     "dfx/anonymize:unittest",
+    "dfx/event:unittest",
     "dfx/hidumper_adapter/unittest:unittest",
     "dfx/hisysevent_adapter/unittest:unittest",
     "dfx/log:unittest",
