--- a/adapter/default_config/feature_config/standard/config.gni
+++ b/adapter/default_config/feature_config/standard/config.gni
@@ -44,4 +44,6 @@ declare_args() {
 
   dsoftbus_feature_ex_kits = false
   dsoftbus_feature_proxy_file = true
+
+  dsoftbus_feature_wifi_notify = true
 }
