--- a/tests/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022 - 2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -26,6 +26,8 @@ group("unittest") {
           "stream_common_data_test:unittest",
           "stream_depacketizer_test:unittest",
           "stream_manager_test:unittest",
+          "stream_msg_manager_test:unittest",
+          "stream_packetizer_test:unittest",
           "vtp_instance_test:unittest",
           "vtp_stream_socket_test:unittest",
         ]
