fix: move rsa encrypt position
Signed-off-by: weiqian <weiqian22@huawei.com>

--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -95,23 +95,18 @@ if (defined(ohos_lite)) {
         ]
       }
 
-      deps = [
-        "$hilog_lite_deps_path",
-        "//base/security/huks/interfaces/inner_api/huks_lite:huks_3.0_sdk",
-      ]
+      deps = [ "$hilog_lite_deps_path" ]
 
       if (dsoftbus_feature_encrypt == 0) {
         sources += [
           "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c",
           "$softbus_adapter_common/mbedtls/softbus_aes_encrypt_virtual.c",
-          "$softbus_adapter_common/mbedtls/softbus_rsa_encrypt_virtual.c",
         ]
         deps += [ "//third_party/mbedtls" ]
       } else if (dsoftbus_feature_encrypt == 1) {
         sources += [
           "$softbus_adapter_common/openssl/softbus_adapter_crypto.c",
           "$softbus_adapter_common/openssl/softbus_aes_encrypt.c",
-          "$softbus_adapter_common/openssl/softbus_rsa_encrypt.c",
         ]
         deps += [ "//third_party/openssl/ohos_lite:openssl_shared" ]
       }
@@ -145,7 +140,6 @@ if (defined(ohos_lite)) {
       ]
       deps = [
         "$hilog_lite_deps_path",
-        "//base/security/huks/interfaces/inner_api/huks_lite:huks_3.0_sdk",
         "//base/startup/init/interfaces/innerkits:libbegetutil",
         "//third_party/bounds_checking_function:libsec_shared",
       ]
@@ -154,14 +148,12 @@ if (defined(ohos_lite)) {
         sources += [
           "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c",
           "$softbus_adapter_common/mbedtls/softbus_aes_encrypt_virtual.c",
-          "$softbus_adapter_common/mbedtls/softbus_rsa_encrypt_virtual.c",
         ]
         deps += [ "//third_party/mbedtls" ]
       } else if (dsoftbus_feature_encrypt == 1) {
         sources += [
           "$softbus_adapter_common/openssl/softbus_adapter_crypto.c",
           "$softbus_adapter_common/openssl/softbus_aes_encrypt.c",
-          "$softbus_adapter_common/openssl/softbus_rsa_encrypt.c",
         ]
         deps += [ "//third_party/openssl/ohos_lite:openssl_shared" ]
       }
@@ -231,7 +223,7 @@ if (defined(ohos_lite)) {
       ]
     }
 
-    external_deps = [ "huks:libhukssdk" ]
+    external_deps = []
     if (enhanced_range && defined(global_parts_info.msdp_algorithm)) {
       include_dirs += [ "//base/msdp/algorithm/ble_range/include" ]
       sources += [ "$dsoftbus_root_path/dsoftbus_enhance/adapter/common/range/softbus_adapter_range.c" ]
@@ -244,14 +236,12 @@ if (defined(ohos_lite)) {
       sources += [
         "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c",
         "$softbus_adapter_common/mbedtls/softbus_aes_encrypt_virtual.c",
-        "$softbus_adapter_common/mbedtls/softbus_rsa_encrypt_virtual.c",
       ]
       public_deps += [ "//third_party/mbedtls" ]
     } else if (dsoftbus_feature_encrypt == 1) {
       sources += [
         "$softbus_adapter_common/openssl/softbus_adapter_crypto.c",
         "$softbus_adapter_common/openssl/softbus_aes_encrypt.c",
-        "$softbus_adapter_common/openssl/softbus_rsa_encrypt.c",
       ]
       public_deps += [ "//third_party/openssl:libcrypto_shared" ]
     }
