--- a/tests/core/adapter/BUILD.gn
+++ b/tests/core/adapter/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -13,86 +13,36 @@
 
 import("//build/test.gni")
 import("../../../dsoftbus.gni")
-module_output_path = "dsoftbus/adapter"
-ohos_unittest("LnnSetdataEventTest") {
+
+module_output_path = "dsoftbus/core"
+dsoftbus_root_path = "../../.."
+
+ohos_unittest("AdapterDsoftbusRsaCryptoTest") {
   module_out_path = module_output_path
-  sources = [
-    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_devicename_info.c",
-    "unittest/lnn_settingdata_event_monitor_test.cpp",
-  ]
+  sources = [ "unittest/dsoftbus_rsa_crypto_test.cpp" ]
 
   include_dirs = [
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
-    "$dsoftbus_root_path/core/bus_center/utils/include",
     "$dsoftbus_root_path/adapter/common/include",
-    "$dsoftbus_root_path/core/adapter/bus_center/include",
-    "$dsoftbus_root_path/core/bus_center/service/include",
-    "$dsoftbus_root_path/core/bus_center/interface",
-    "$dsoftbus_root_path/interfaces/kits/bus_center",
-    "$dsoftbus_root_path/adapter/common/bus_center/include",
-    "$dsoftbus_root_path/interfaces/kits/common",
-    "$dsoftbus_root_path/tests/core/bus_center/lnn/net_builder/include",
+    "$dsoftbus_root_path/core/adapter/huks/include",
     "$dsoftbus_root_path/core/common/include",
-    "//third_party/googletest/googletest/include",
-    "//third_party/googletest/googletest/src",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src",
-    "$dsoftbus_root_path/core/authentication/include",
-    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
-    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/include",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/sync_info/include",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
-    "$dsoftbus_root_path/core/bus_center/lnn/disc_mgr/include",
-    "$dsoftbus_root_path/core/bus_center/monitor/include",
-    "$dsoftbus_root_path/core/common/include",
-    "$dsoftbus_root_path/adapter/common/include",
-    "$dsoftbus_root_path/core/connection/interface",
-    "$dsoftbus_root_path/core/connection/p2p/interface",
-    "$dsoftbus_root_path/core/connection/p2p/common/include",
-    "$dsoftbus_root_path/core/authentication/interface",
-    "$dsoftbus_root_path/core/bus_center/interface",
-    "$dsoftbus_root_path/core/bus_center/utils/include",
-    "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
-    "$dsoftbus_root_path/core/adapter/bus_center/include",
-    "//third_party/cJSON",
-    "unittest/common/",
-    "$dsoftbus_root_path/core/connection/manager",
-    "$dsoftbus_root_path/adapter/common/bus_center/include/",
-    "$dsoftbus_root_path/core/discovery/manager/include",
-    "$dsoftbus_root_path/core/discovery/interface",
-    "$dsoftbus_root_path/interfaces/kits/discovery",
-    "$dsoftbus_root_path/core/bus_center/service/include",
-    "$dsoftbus_root_path/tests/core/bus_center/mock_common/include",
-    "$dsoftbus_root_path/core/transmission/interface",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/decision_db/include",
-    "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
-    "$dsoftbus_root_path/adapter/common/net/wifi/include",
-    "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
-    "$dsoftbus_root_path/core/bus_center/utils/include",
-    "$dsoftbus_root_path/core/connection/wifi_direct",
-    "$dsoftbus_root_path/adapter/common/net/bluetooth/include/",
-    "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single",
+    "//third_party/bounds_checking_function/include",
   ]
 
   deps = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common:softbus_utils",
     "$dsoftbus_root_path/core/frame:softbus_server",
-    "$dsoftbus_root_path/tests/sdk/common:softbus_access_token_test",
-    "//third_party/bounds_checking_function:libsec_shared",
-    "//third_party/googletest:gmock_main",
+    "//third_party/bounds_checking_function:libsec_static",
     "//third_party/googletest:gtest_main",
   ]
 
   if (is_standard_system) {
+    deps += [ "//third_party/openssl:libcrypto_shared" ]
     external_deps = [
       "c_utils:utils",
       "hilog:libhilog",
+      "huks:libhukssdk",
     ]
   } else {
     external_deps = [
@@ -104,5 +54,5 @@ ohos_unittest("LnnSetdataEventTest") {
 
 group("unittest") {
   testonly = true
-  deps = [ ":LnnSetdataEventTest" ]
+  deps = [ ":AdapterDsoftbusRsaCryptoTest" ]
 }
