fix: add wifidirect utils UT
Signed-off-by: yifan-shi_admin <shiyifan10@huawei.com>

--- a/tests/core/connection/wifi_direct/utils/BUILD.gn
+++ b/tests/core/connection/wifi_direct/utils/BUILD.gn
@@ -26,8 +26,10 @@ ohos_unittest("WifiDirectUtilsTest") {
     "$dsoftbus_root_path/core/connection/wifi_direct/data",
     "$dsoftbus_root_path/core/connection/wifi_direct/utils",
     "$dsoftbus_root_path/core/connection/wifi_direct",
+    "$dsoftbus_root_path/core/connection/wifi_direct/command",
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
+    "$dsoftbus_root_path/core/connection/wifi_direct/entity",
     "//third_party/googletest/googletest/include",
     "//third_party/googletest/googletest/src",
     "//third_party/bounds_checking_function/include",
