--- a/sdk/BUILD.gn
+++ b/sdk/BUILD.gn
@@ -27,6 +27,7 @@ common_client_inc = bus_center_sdk_inc + disc_sdk_inc +
 common_client_deps = bus_center_sdk_deps + trans_session_manager_sdk_deps
 
 common_client_deps += [
+  "$dsoftbus_dfx_path/anonymize:softbus_dfx_anonymizer",
   "$dsoftbus_dfx_path/log:softbus_dfx_log",
   "$dsoftbus_root_path/adapter:softbus_adapter",
   "$dsoftbus_root_path/core/common:softbus_utils",
