fix:Add UT Test Cases
Signed-off-by: zhangyinhui6 <zhangyinhui6@huawei.com>

--- a/tests/core/transmission/common/softbus_message_open_channel_test/BUILD.gn
+++ b/tests/core/transmission/common/softbus_message_open_channel_test/BUILD.gn
@@ -34,6 +34,7 @@ ohos_unittest("SoftBusMessageOpenChannelTest") {
     "//third_party/cJSON",
     "$dsoftbus_root_path/interfaces/kits/transport",
     "$dsoftbus_root_path/core/transmission/trans_channel/auth/include",
+    "$dsoftbus_root_path/core/transmission/common/src",
     "$dsoftbus_root_path/adapter/common/kernel/posix",
   ]
 
