--- a/tests/core/connection/ble/BUILD.gn
+++ b/tests/core/connection/ble/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -26,10 +26,12 @@ config("softbus_connection_ble_test_config") {
     "$softbus_adapter_common/include",
     "$softbus_adapter_common/net/bluetooth/include",
     "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/core/common/dfx/interface/include",
     "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/core/connection/manager",
     "$dsoftbus_root_path/core/connection/tcp/include",
     "$dsoftbus_root_path/core/connection/ble/include",
+    "$dsoftbus_root_path/core/connection/ble/channel",
     "$dsoftbus_root_path/core/connection/ble/src",
     "$dsoftbus_root_path/core/bus_center/interface",
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
@@ -88,7 +90,10 @@ ohos_unittest("ConnectionBleSwitchTest") {
 ohos_unittest("BleConnectionServiceTest") {
   module_out_path = module_output_path
   public_configs = [ ":softbus_connection_ble_test_config" ]
-  sources = [ "connection_ble_mock.cpp" ]
+  sources = [
+    "ble_service_connection_test.cpp",
+    "connection_ble_mock.cpp",
+  ]
 
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
