feat:add ptk and static cap
Signed-off-by: shufewhx <wanghaoxu1@huawei.com>

--- a/core/bus_center/lnn/net_builder/net_builder.gni
+++ b/core/bus_center/lnn/net_builder/net_builder.gni
@@ -40,14 +40,18 @@ if (dsoftbus_feature_lnn_net) {
       "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_fast_offline_virtual.c",
       "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_cipherkey_manager_virtual.c",
       "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_device_info_recovery_virtual.c",
+      "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_ptk_info_virtual.c",
+      "$dsoftbus_root_path/core/bus_center/utils/src/lnn_secure_storage.c",
     ]
     bus_center_builder_inc =
         [ "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single" ]
   } else {
     import(
         "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/net_builder/cipherkey/cipherkey.gni")
+    import(
+        "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/net_builder/ptk/ptk.gni")
 
-    bus_center_builder_src += cipherkey_sources
+    bus_center_builder_src += cipherkey_sources + ptk_sources
     bus_center_builder_src += [
       "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/net_builder/fast_online/lnn_device_info_recovery.c",
       "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/net_builder/fast_online/lnn_secure_storage.c",
@@ -58,6 +62,7 @@ if (dsoftbus_feature_lnn_net) {
   bus_center_builder_src = [
     "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_net_builder_virtual.c",
     "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_cipherkey_manager_virtual.c",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_ptk_info_virtual.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/wifi_direct_p2p_adapter_virtual.c",
   ]
 }
