--- a/adapter/common/bus_center/bus_center_adapter.gni
+++ b/adapter/common/bus_center/bus_center_adapter.gni
@@ -92,8 +92,10 @@ if (defined(ohos_lite)) {
   if (has_ces_part) {
     bus_center_adapter_src +=
         [ "$adapter_bus_center_path/common_event/lnn_common_event_monitor.cpp" ]
-    bus_center_adapter_external_deps +=
-        [ "common_event_service:cesfwk_innerkits" ]
+    bus_center_adapter_external_deps += [
+      "ability_base:want",
+      "common_event_service:cesfwk_innerkits",
+    ]
   } else {
     bus_center_adapter_src += [ "$adapter_bus_center_path/common_event/lnn_common_event_monitor_virtual.cpp" ]
   }
@@ -109,7 +111,10 @@ if (defined(ohos_lite)) {
     if (dsoftbus_feature_lnn_wifiservice_dependence && has_ces_part) {
       bus_center_adapter_src +=
           [ "$adapter_bus_center_path/wlan/lnn_wifiservice_monitor.cpp" ]
-      bus_center_adapter_external_deps += [ "wifi:wifi_sdk" ]
+      bus_center_adapter_external_deps += [
+        "ability_base:want",
+        "wifi:wifi_sdk",
+      ]
     } else {
       bus_center_adapter_src += [
         "$adapter_bus_center_path/wlan/lnn_wifiservice_monitor_virtual.cpp",
